// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-collapsible css-1oanc4k"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="false"
    class="css-15tf5go"
    data-destructive="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="wp-components-view wp-components-flex css-vqn2g8"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <span
        class="wp-components-flex-item wp-components-flex-block css-11l05e8"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Show/Hide
      </span>
    </span>
    <span
      class="wp-components-elevation css-r2c0vy"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="css-12j8ok7 wp-components-collapsible-content"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    hidden=""
    id="collapsible"
    style="display: none;"
  >
    <div
      class="wp-components-animated css-ebb2lo"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: 0px; opacity: 0;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;

exports[`props should render visible 1`] = `
<div
  class="wp-components-view wp-components-collapsible css-1oanc4k"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="true"
    class="css-15tf5go"
    data-destructive="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="wp-components-view wp-components-flex css-vqn2g8"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <span
        class="wp-components-flex-item wp-components-flex-block css-11l05e8"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Show/Hide
      </span>
    </span>
    <span
      class="wp-components-elevation css-r2c0vy"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="css-12j8ok7 wp-components-collapsible-content"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    id="collapsible"
  >
    <div
      class="wp-components-animated css-ebb2lo"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: auto; opacity: 1;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;
